--- a/index.css
+++ b/index.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,900&display=swap');*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Bodoni Moda', serif;
     font-size: 1.2rem;
 }
-.container{
+
+.container {
     min-height: 100vh;
     display: flex;
     justify-content: space-evenly;
@@ -17,17 +20,19 @@ body{
     background: linear-gradient(to right, #041308, #0b3317);
 }
 
-.left-text{
+.left-text {
     flex-basis: 30%;
 }
-.gallery{
+
+.gallery {
     flex-basis: 50%;
     display: grid;
     gap: 8px;
-    grid-template-columns: repeat(3 , 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 120px;
 }
-.box{
+
+.box {
     background-size: cover;
     background-position: top;
     color: white;
@@ -38,27 +43,52 @@ body{
     background-blend-mode: hard-light;
     transition: all 1s ease-in-out;
 }
-.box:hover{
+
+.box:hover {
     background-color: #999;
     background-position: center;
     box-shadow: 0px 0px 4px #fff;
     cursor: pointer;
 }
-.row-2{
+
+.row-2 {
     grid-row: span 2;
 }
-.col-2{
+
+.col-2 {
     grid-column: span 2;
 
 }
-.heading
-{
+
+.heading {
     font-size: 3rem;
     color: wheat;
     text-align: center;
 }
-.subheading{
+
+.subheading {
     color: #ddd;
     margin-top: 10px;
     text-align: center;
+}
+
+/*Media queries*/
+
+@media screen and (max-width: 1024px) {
+    .container {
+        flex-direction: column;
+        padding-block: 20px;
+    }
+
+    .gallery {
+        width: 100%;
+        grid-auto-rows: 420px;
+        gap: 20px;
+
+    }
+
+    .box {
+        grid-row: span 1;
+        grid-column: span 3;
+    }
 }
